etc/testlog.conf: fixed logging during test
- renamed from logging-nosetests.conf
- use RotatingFileHandler to prevent the log file gets too large

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -173,7 +173,7 @@ discover = ${buildout:directory}/pyhwp
 	   ${buildout:directory}/pyhwp_uno
            ${buildout:directory}/unokit
 extra_path=${oxt-test-eggs:egg-path}
-logconf_path=${buildout:directory}/logging-nosetests.conf
+logconf_path=${buildout:directory}/etc/testlog.conf
 
 [oxt-test-eggs]
 recipe = egg.path
