--- a/etc/testlog.conf
+++ b/etc/testlog.conf
@@ -17,10 +17,10 @@ handlers=file
 level=DEBUG
 
 [handler_file]
-class=FileHandler
+class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simple
-args=('nosetests-pyhwp-debug.log',)
+args=('nosetests.log', 'a', 10*1024*1024)
 
 [formatter_simple]
 format=%(levelname)s - %(message)s
