--- a/tox.ini.in
+++ b/tox.ini.in
@@ -14,6 +14,15 @@ commands=
 	hwp5-xunits-prepare --fixtures-dir={toxinidir}/pyhwp/hwp5/tests/fixtures --out-dir={envtmpdir}
         {toxinidir}/bin/xunit --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir} --gen-dir={envtmpdir}/gen-xunits {toxinidir}/pyhwp-xunits
 
+[testenv:py25]
+basepython=${python25:executable}
+
+[testenv:py26]
+basepython=${python26:executable}
+
+[testenv:py27]
+basepython=${python27:executable}
+
 [testenv:jy25]
 setenv=JYTHONPATH=${java-poi:location}/poi-3.8-20120326.jar
 basepython=${jython25:executable}
