move build/test tools into tools/

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,18 @@
 [buildout]
 develop = .
-          xunit
+          tools/xunit
           pyhwp-xunits
-          jingodf
+          tools/jingodf
           unokit
-          oxt.tool
+          tools/oxt.tool
           pyhwp_uno
-          discover.python
-          discover.lxml
-          discover.jre
-          discover.lo
-          install.jython
-          egg.path
-          misc/gpl
+          tools/discover.python
+          tools/discover.lxml
+          tools/discover.jre
+          tools/discover.lo
+          tools/install.jython
+          tools/egg.path
+          tools/gpl
 parts = pyhwp
         docs-update-po
 	docs-build
