xsltest: renamed from xunit (close #105)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
-          tools/xunit
-          pyhwp-xunits
+          tools/xsltest
+          pyhwp-xsltests
           tools/jingodf
           unokit
           tools/oxt.tool
@@ -21,13 +21,13 @@ parts = pyhwp
 	test-coverage
 	test-cli
 	test-sdist
-	test-xunits
+	test-xsl
 	install-lxml-py25
 	install-lxml-py26
 	install-lxml-py27
 	jython25
 	java-poi
-        xunit
+        xsltest
 	pylint
 	pep8
 	oxt-tool
@@ -101,9 +101,9 @@ input = ${buildout:directory}/misc/test-sdist.in
 output = ${buildout:directory}/bin/test-sdist
 mode = 755
 
-[test-xunits]
+[test-xsl]
 recipe = zc.recipe.egg
-eggs = pyhwp-xunits
+eggs = pyhwp-xsltests
 
 [python27]
 recipe = discover.python
@@ -178,9 +178,9 @@ md5sum = b9278ad8aed53eeb672fec66c764e371
 destination = ${buildout:directory}/downloads
 download-only = true
 
-[xunit]
+[xsltest]
 recipe = zc.recipe.egg
-eggs = xunit
+eggs = xsltest
 
 [pylint]
 recipe = zc.recipe.egg
