bin/test-core: renamed from bin/test
to prevent name conflicts with linux /usr/bin/test

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,7 +17,7 @@ parts = pyhwp
         docs-update-po
 	docs-build
 	docs-upload
-	test
+	test-core
 	test-coverage
 	test-cli
 	test-sdist
@@ -78,7 +78,7 @@ input = ${buildout:directory}/misc/docs-upload
 output = ${buildout:directory}/bin/docs-upload
 mode = 755
 
-[test]
+[test-core]
 recipe = collective.xmltestreport
 eggs = pyhwp
 defaults = ['--auto-color', '--auto-progress', '--xml']
