tools.constants: provides some constants for development tools

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ develop = .
           tools/install.jython
           tools/egg.path
           tools/gpl
+          tools/constants
 parts = pyhwp
         docs-update-po
 	docs-build
@@ -49,6 +50,9 @@ versions = versions
 
 [versions]
 collective.xmltestreport = 1.2.6
+
+[constants]
+recipe = pyhwp.dev.constants
 
 [pyhwp]
 recipe = zc.recipe.egg
