test-core: fixed to find tests in the `hwp5_tests` package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -85,8 +85,8 @@ mode = 755
 
 [test-core]
 recipe = collective.xmltestreport
-eggs = pyhwp
-defaults = ['--auto-color', '--auto-progress', '--xml']
+eggs = pyhwp-tests
+defaults = ['--auto-color', '--auto-progress', '--xml', '--tests-pattern=hwp5_tests']
 
 [test-coverage]
 recipe = collective.recipe.template
