testlog.conf: include logger name in the log format

--- a/etc/testlog.conf
+++ b/etc/testlog.conf
@@ -23,5 +23,5 @@ formatter=simple
 args=('nosetests.log', 'a', 10*1024*1024)
 
 [formatter_simple]
-format=%(levelname)s - %(message)s
+format=%(name)s:%(levelname)s:%(message)s
 datefmt=
