test-tools: add oxt.tool

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ parts = pyhwp
         xsltest
 	pylint
 	pep8
+        test-tools
 	oxt-tool
 	oxt-console
 	oxt-test
@@ -85,6 +86,11 @@ mode = 755
 recipe = collective.xmltestreport
 eggs = pyhwp-tests
 defaults = ['--auto-color', '--auto-progress', '--xml', '--tests-pattern=hwp5_tests']
+
+[test-tools]
+recipe = collective.xmltestreport
+eggs = oxt.tool
+defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [test-coverage]
 recipe = collective.recipe.template
