--- a/tox.ini.in
+++ b/tox.ini.in
@@ -11,6 +11,7 @@ commands=
 	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
 	{envpython} {toxinidir}/bin/install-lxml-{envname}.py {envtmpdir}
 	{envbindir}/coverage run -p --source=hwp5,hwp5_tests {envbindir}/nosetests${constants:script_py_suffix} -v -w {envtmpdir} {toxinidir}/pyhwp-tests --logging-config={toxinidir}/etc/testlog.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml
+	{envpython} {toxinidir}/misc/test-cli.py
 	{envpython} {toxinidir}/misc/prepare-hwp5-xsl-fixtures.py --fixtures-dir={toxinidir}/pyhwp-tests/hwp5_tests/fixtures --out-dir={envtmpdir}/hwp5_xsl_fixtures
 	{toxinidir}/bin/xsltest --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir}/hwp5_xsl_fixtures --gen-dir={envtmpdir}/hwp5_xsl_tests {toxinidir}/pyhwp-tests/hwp5_xsl_tests
 
