--- a/misc/test-cli.in
+++ b/misc/test-cli.in
@@ -1,3 +1,3 @@
 #!/bin/sh
 PATH=${buildout:bin-directory}:$PATH
-. ${buildout:directory}/misc/test-cli.sh
+. ${buildout:directory}/pyhwp-tests/hwp5_cli_tests.sh
