tools/gpl: experimental reimplementation based on monadic-combinatoric-parsers 'Pysec'
see http://www.valuedlessons.com/2008/02/pysec-monadic-combinatoric-parsing-in.html

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -90,6 +90,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml', '--tests-pattern=hwp5_te
 [test-tools]
 recipe = collective.xmltestreport
 eggs = oxt.tool
+       gpl
 defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [test-coverage]
