java-poi: upgrade to 3.9 and change download url

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -171,16 +171,20 @@ download-only = true
 destination = ${buildout:directory}/downloads
 filename = jython-installer-2.5.3.jar
 
+[java-poi-package]
+pkgid = poi-bin-3.9-20121203
+jar = poi-3.9-20121203.jar
+
 [java-poi]
 recipe = hexagonit.recipe.download
-url = ${java-poi-download:destination}/poi-bin-3.8-20120326.tar.gz
+url = ${java-poi-download:destination}/${java-poi-package:pkgid}.tar.gz
 md5sum = ${java-poi-download:md5sum}
 strip-top-level-dir = true
 
 [java-poi-download]
 recipe = hexagonit.recipe.download
-url = http://apache.mirror.cdnetworks.com/poi/release/bin/poi-bin-3.8-20120326.tar.gz
-md5sum = b9278ad8aed53eeb672fec66c764e371
+url = http://archive.apache.org/dist/poi/release/bin/${java-poi-package:pkgid}.tar.gz
+md5sum = 09c4dfd63317bb9eb37fe12d6febea74
 destination = ${buildout:directory}/downloads
 download-only = true
 
