buildout: pin to virtualenv 1.8.4 (see #118)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -50,6 +50,7 @@ versions = versions
 
 [versions]
 collective.xmltestreport = 1.2.6
+virtualenv = 1.8.4
 
 [constants]
 recipe = pyhwp.dev.constants
