--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,13 +3,9 @@ develop = .
           pyhwp-tests
           tools/xsltest
           tools/jingodf
-          unokit
-          tools/oxt.tool
-          pyhwp_uno
           tools/discover.python
           tools/discover.lxml
           tools/discover.jre
-          tools/discover.lo
           tools/install.jython
           tools/egg.path
           tools/gpl
@@ -31,16 +27,8 @@ parts = pyhwp
 	pylint
 	pep8
         test-tools
-	oxt-tool
-	oxt-console
-	oxt-test
-	oxt-pythonpath
-	oxt-build
-	oxt-install
-	console-in-lo
 	upload
 	test-for-bisect
-        test-in-lo
 	tox
 	tox-ini
 
@@ -84,8 +72,7 @@ defaults = ['--auto-color', '--auto-progress', '--xml', '--tests-pattern=hwp5_te
 
 [test-tools]
 recipe = collective.xmltestreport
-eggs = oxt.tool
-       gpl
+eggs = gpl
 defaults = ['--auto-color', '--auto-progress', '--xml']
 
 [test-coverage]
@@ -198,58 +185,6 @@ extra-paths = ${buildout:directory}/pyhwp
 recipe = zc.recipe.egg
 eggs = pep8
 
-[lo]
-recipe = discover.lo
-search-in-wellknown-places = true
-search-in-path = true
-
-[oxt-pythonpath]
-recipe = collective.recipe.omelette
-eggs = pyhwp_uno
-location = oxt/pythonpath
-
-[oxt-tool]
-recipe = zc.recipe.egg
-eggs = oxt.tool
-
-[oxt-console]
-recipe = oxt.tool:console
-python = ${lo:uno_python}
-soffice = ${lo:soffice}
-
-[oxt-test]
-recipe = oxt.tool:test
-python = ${lo:uno_python}
-soffice = ${lo:soffice}
-discover = ${buildout:directory}/pyhwp
-	   ${buildout:directory}/pyhwp_uno
-           ${buildout:directory}/unokit
-extra_path=${oxt-test-eggs:egg-path}
-logconf_path=${buildout:directory}/etc/testlog.conf
-
-[oxt-test-eggs]
-recipe = egg.path
-eggs = pyhwp
-       hypua2jamo
-       pyhwp-uno
-       unokit
-
-[oxt-build]
-recipe = collective.recipe.template
-input = ${buildout:directory}/misc/oxt-build.in
-output = ${buildout:directory}/bin/oxt-build
-mode = 755
-
-[oxt-install]
-recipe = oxt.tool:installer
-unopkg = ${lo:unopkg}
-
-[console-in-lo]
-recipe = oxt.tool:console
-python = ${lo:uno_python}
-soffice = ${lo:soffice}
-in_proc = true
-
 [upload]
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/upload
@@ -260,12 +195,6 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-for-bisect
 output = ${buildout:directory}/bin/test-for-bisect
-mode = 755
-
-[test-in-lo]
-recipe = collective.recipe.template
-input = ${buildout:directory}/misc/test-in-lo.py
-output = ${buildout:directory}/bin/test-in-lo
 mode = 755
 
 [tox]
