--- a/tox.ini.in
+++ b/tox.ini.in
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir={toxinidir}/parts/tox
 setupdir={toxinidir}
-envlist = py25,py26,py27,jy25,lo
+envlist = py25,py26,py27,jy25
 
 [testenv]
 deps=nose
@@ -40,18 +40,3 @@ commands =
 	{envbindir}/coverage run -p -L {envbindir}/nosetests${constants:script_py_suffix} -v -w {envtmpdir} {toxinidir}/pyhwp-tests --logging-config={toxinidir}/etc/testlog.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml
 	{envpython} {toxinidir}/misc/prepare-hwp5-xsl-fixtures.py --fixtures-dir={toxinidir}/pyhwp-tests/hwp5_tests/fixtures --out-dir={envtmpdir}/hwp5_xsl_fixtures
         {toxinidir}/bin/xsltest --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir}/hwp5_xsl_fixtures --gen-dir={envtmpdir}/hwp5_xsl_tests {toxinidir}/pyhwp-tests/hwp5_xsl_tests
-
-[testenv:lo]
-setenv=PATH={env:PATH}${constants:pathsep}${lo:program}${constants:pathsep}${lo:ure}${constants:sep}bin
-       UNO_PYTHONPATH=${lo:uno_pythonpath}
-       LO_PROGRAM=${lo:program}
-       PYHWP_PLAT_UNO=1
-basepython=${lo:uno_python}
-commands=
-	{envpython} {toxinidir}/misc/cleanup-pyc.py {toxinidir}/pyhwp {toxinidir}/pyhwp_uno {toxinidir}/unokit
-	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
-	{envpython} {toxinidir}/unokit/setup.py develop
-	{envpython} {toxinidir}/tools/oxt.tool/setup.py develop
-	run-in-lo {envbindir}/nosetests${constants:script_py_suffix} -v -w {envtmpdir} {toxinidir}/pyhwp-tests {toxinidir}/unokit {toxinidir}/pyhwp_uno --logging-conf={toxinidir}/etc/testlog.conf --with-xunit --xunit-file={envtmpdir}/nosetests.xml --with-coverage --cover-package=hwp5,hwp5_tests,hwp5_uno,unokit --cover-tests
-	run-in-lo {toxinidir}/misc/prepare-hwp5-xsl-fixtures.py --fixtures-dir={toxinidir}/pyhwp-tests/hwp5_tests/fixtures --out-dir={envtmpdir}/hwp5_xsl_fixtures
-	{toxinidir}/bin/xsltest --styles-dir={toxinidir}/pyhwp/hwp5/xsl --import-dir={envtmpdir}/hwp5_xsl_fixtures --gen-dir={envtmpdir}/hwp5_xsl_tests {toxinidir}/pyhwp-tests/hwp5_xsl_tests
