--- a/tox.ini.in
+++ b/tox.ini.in
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir={toxinidir}/parts/tox
 setupdir={toxinidir}
-envlist = py25,py26,py27,jy25
+envlist = py25,py26,py27,jython
 
 [testenv]
 deps=nose
@@ -18,8 +18,7 @@ commands=
 [testenv:py25]
 setenv=PIP_INSECURE=1
 
-[testenv:jy25]
-basepython=jython
+[testenv:jython]
 setenv=JYTHONPATH=${java-poi:location}/${java-poi-package:jar}
        PIP_INSECURE=1
 commands =
