buildsystem: support CPython-3.3

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ parts = pyhwp
 	install-lxml-py25
 	install-lxml-py26
 	install-lxml-py27
+	install-lxml-py33
 	java-poi
         xsltest
 	pylint
@@ -101,6 +102,10 @@ version = 2.6
 recipe = discover.python
 version = 2.5
 
+[python33]
+recipe = discover.python
+version = 3.3
+
 [python27-lxml]
 recipe = discover.lxml
 python=${python27:executable}
@@ -112,6 +117,10 @@ python=${python26:executable}
 [python25-lxml]
 recipe = discover.lxml
 python=${python25:executable}
+
+[python33-lxml]
+recipe = discover.lxml
+python=${python33:executable}
 
 [install-lxml-py25]
 recipe = collective.recipe.template
@@ -130,6 +139,12 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/install-lxml.py.in
 output = ${buildout:directory}/bin/install-lxml-py27.py
 lxml-location=${python27-lxml:location}
+
+[install-lxml-py33]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/install-lxml.py.in
+output = ${buildout:directory}/bin/install-lxml-py33.py
+lxml-location=${python33-lxml:location}
 
 [java-poi-package]
 pkgid = poi-bin-3.9-20121203
