add pypy in buildout/tox.ini

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,7 @@ parts = pyhwp
 	install-lxml-py26
 	install-lxml-py27
 	install-lxml-py33
+	install-lxml-pypy
 	java-poi
         xsltest
 	pylint
@@ -145,6 +146,12 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/install-lxml.py.in
 output = ${buildout:directory}/bin/install-lxml-py33.py
 lxml-location=${python33-lxml:location}
+
+[install-lxml-pypy]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/install-lxml.py.in
+output = ${buildout:directory}/bin/install-lxml-pypy.py
+lxml-location=${python27-lxml:location}
 
 [java-poi-package]
 pkgid = poi-bin-3.9-20121203
