--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ develop = .
           tools/gpl
           tools/constants
           tools/download
+          tools/unpack
 parts = pyhwp
         develop-tools
         docs-update-po
@@ -23,7 +24,6 @@ parts = pyhwp
 	install-lxml-py27
 	install-lxml-py33
 	install-lxml-pypy
-	java-poi
         xsltest
 	pylint
 	pep8
@@ -52,6 +52,7 @@ interpreter = console
 [develop-tools]
 recipe = zc.recipe.egg
 eggs = pyhwp.develop.download
+       pyhwp.develop.unpack
 
 [docs-update-po]
 recipe = collective.recipe.template
