--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,9 @@ develop = .
           tools/egg.path
           tools/gpl
           tools/constants
+          tools/download
 parts = pyhwp
+        develop-tools
         docs-update-po
 	docs-build
 	docs-upload
@@ -46,6 +48,10 @@ eggs = pyhwp
        pyroma
        zest.releaser
 interpreter = console
+
+[develop-tools]
+recipe = zc.recipe.egg
+eggs = pyhwp.develop.download
 
 [docs-update-po]
 recipe = collective.recipe.template
