--- a/tox.ini.in
+++ b/tox.ini.in
@@ -22,6 +22,7 @@ setenv=PIP_INSECURE=1
 setenv=JYTHONPATH=${java-poi:location}/${java-poi-package:jar}
        PIP_INSECURE=1
 commands =
+        ${buildout:bin-directory}/pyhwp-download http://archive.apache.org/dist/poi/release/bin/poi-bin-3.9-20121203.tar.gz ${buildout:parts-directory} 09c4dfd63317bb9eb37fe12d6febea74
 	{envpython} {toxinidir}/misc/cleanup-pyc.py {toxinidir}/pyhwp {toxinidir}/pyhwp_uno {toxinidir}/unokit
 	{envpython} {toxinidir}/misc/mkdir.py {envtmpdir}
 	{envpython} -c 'from org.apache.poi.poifs.filesystem import POIFSFileSystem'
