tools: pyhwp.zestreleaser.cmds

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ develop = .
           tools/constants
           tools/download
           tools/unpack
+          tools/pyhwp.zestreleaser.cmds
 parts = pyhwp
         develop-tools
         docs-update-po
@@ -48,6 +49,7 @@ eggs = pyhwp
        nose
        pyroma
        zest.releaser
+       pyhwp.zestreleaser.cmds
 interpreter = console
 
 [develop-tools]
