buildout: test-upload

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ parts = pyhwp
 	test-coverage
 	test-cli
 	test-sdist
+	test-upload
 	install-lxml-py25
 	install-lxml-py26
 	install-lxml-py27
@@ -98,6 +99,12 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-sdist.in
 output = ${buildout:directory}/bin/test-sdist
+mode = 755
+
+[test-upload]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-upload.in
+output = ${buildout:directory}/bin/test-upload
 mode = 755
 
 [python27]
