buildout: add test-pypi

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ parts = pyhwp
 	test-cli
 	test-sdist
 	test-upload
+        test-pypi
 	install-lxml-py25
 	install-lxml-py26
 	install-lxml-py27
@@ -107,6 +108,12 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-upload.in
 output = ${buildout:directory}/bin/test-upload
+mode = 755
+
+[test-pypi]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-pypi.in
+output = ${buildout:directory}/bin/test-pypi
 mode = 755
 
 [python27]
