buildout: add test-xsl

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ parts = pyhwp
 	test-core
 	test-coverage
 	test-cli
+        test-xsl
 	test-sdist
 	test-upload
         test-pypi
@@ -96,6 +97,12 @@ mode = 755
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-cli.in
 output = ${buildout:directory}/bin/test-cli
+mode = 755
+
+[test-xsl]
+recipe = collective.recipe.template
+input = ${buildout:directory}/misc/test-xsl.in
+output = ${buildout:directory}/bin/test-xsl
 mode = 755
 
 [test-sdist]
