test-xsl: integrate xslt coverage (close #104)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -99,6 +99,37 @@ input = ${buildout:directory}/misc/test-cli.in
 output = ${buildout:directory}/bin/test-cli
 mode = 755
 
+[virtualenv-download]
+recipe = hexagonit.recipe.download
+url = https://pypi.python.org/packages/source/v/virtualenv/virtualenv-1.9.1.tar.gz
+md5sum = 07e09df0adfca0b2d487e39a4bf2270a
+download-only = true
+destination = ${buildout:parts-directory}
+filename = virtualenv-1.9.1.tar.gz
+
+[virtualenv-unpack]
+recipe = hexagonit.recipe.download
+url = https://pypi.python.org/packages/source/v/virtualenv/virtualenv-1.9.1.tar.gz
+destination = ${buildout:parts-directory}/virtualenv
+strip-top-level-dir = true
+
+[jxml]
+location = ${buildout:parts-directory}/jxml
+recipe = collective.recipe.cmd
+cmds = mkdir -p ${:location}
+       jython ${virtualenv-unpack:destination}/virtualenv.py ${:location}
+       ${:location}/bin/jython ${buildout:directory}/tools/xsltest/setup.py develop
+       ${:location}/bin/jython ${buildout:directory}/tools/jxml/setup.py develop
+       ${:location}/bin/jython ${buildout:directory}/tools/jxml/lxml/setup.py develop
+       ${:location}/bin/jython ${buildout:directory}/tools/jxml/jxml.coverage/setup.py develop
+       ${buildout:bin-directory}/pyhwp-download http://mirror.apache-kr.org/xalan/xalan-j/binaries/xalan-j_2_7_1-bin-2jars.tar.gz ${buildout:parts-directory} 3ccda39bcd08b780436dfd2f22fb23d5
+       ${buildout:bin-directory}/pyhwp-unpack ${buildout:parts-directory}/xalan-j_2_7_1-bin-2jars.tar.gz ${buildout:parts-directory}/xalan-j_2_7_1
+uninstall_cmds = rm -rf ${:location}
+on_install = true
+on_update = true
+xalan-j-dir = ${buildout:parts-directory}/xalan-j_2_7_1
+xalan-j-jars = ${:xalan-j-dir}/xalan.jar:${:xalan-j-dir}/xercesImpl.jar:${:xalan-j-dir}/serializer.jar:${:xalan-j-dir}/xml-apis.jar
+
 [test-xsl]
 recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-xsl.in
