buildout: translator.cfg

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -1,16 +1,13 @@
 [buildout]
-develop+= .
-          pyhwp-tests
+extends = translator.cfg
+develop+= pyhwp-tests
           tools/xsltest
           tools/gpl
           tools/constants
           tools/download
           tools/unpack
-parts+= pyhwp
-        docs-update-po
-	docs-build
-        develop-tools
-	test-core
+parts+= develop-tools
+        test-core
 	test-coverage
 	test-cli
         test-xsl
@@ -22,26 +19,10 @@ parts+= pyhwp
 	pep8
 
 [pyhwp]
-recipe = zc.recipe.egg
-eggs = pyhwp
-       sphinx
-       nose
+eggs+= nose
        coverage
        gpl
        pyroma
-interpreter = console
-
-[docs-update-po]
-recipe = collective.recipe.template
-input = ${buildout:directory}/misc/docs-update-po
-output = ${buildout:directory}/bin/docs-update-po
-mode = 755
-
-[docs-build]
-recipe = collective.recipe.template
-input = ${buildout:directory}/misc/docs-build
-output = ${buildout:directory}/bin/docs-build
-mode = 755
 
 [test-core]
 recipe = collective.xmltestreport
