buildout: user.cfg

--- a/buildouts/translator.cfg
+++ b/buildouts/translator.cfg
@@ -1,14 +1,10 @@
 [buildout]
-develop+= .
-parts+= pyhwp
-        docs-update-po
+extends = user.cfg
+parts+= docs-update-po
 	docs-build
 
 [pyhwp]
-recipe = zc.recipe.egg
-eggs = pyhwp
-       sphinx
-interpreter = console
+eggs+= sphinx
 
 [docs-update-po]
 recipe = collective.recipe.template
