buildout: test-xsl-cov / buildouts components

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -1,5 +1,7 @@
 [buildout]
 extends = translator.cfg
+          components/jxml.cfg
+          components/xalan-j-2.7.1.cfg
 develop+= pyhwp-tests
           tools/xsltest
           tools/gpl
@@ -11,6 +13,7 @@ parts+= develop-tools
 	test-coverage
 	test-cli
         test-xsl
+        test-xsl-cov
 	test-sdist
         test-tools
 	test-for-bisect
@@ -34,6 +37,14 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/misc/test-xsl.in
 output = ${buildout:directory}/bin/test-xsl
 mode = 755
+
+[test-xsl-cov]
+recipe = collective.recipe.template
+mode=755
+output=${buildout:bin-directory}/test-xsl-cov
+input =inline:
+       #!/bin/sh
+       CLASSPATH=${xalan-j-2.7.1:jars} ${jxml:location}/bin/jxml-cov-test $*
 
 [test-coverage]
 recipe = collective.recipe.template
@@ -78,29 +89,6 @@ extra-paths = ${buildout:directory}/pyhwp
 [pep8]
 recipe = zc.recipe.egg
 eggs = pep8
-
-[jxml]
-location = ${buildout:parts-directory}/jxml
-recipe = collective.recipe.cmd
-cmds = mkdir -p ${:location}
-       jython ${virtualenv-unpack:destination}/virtualenv.py ${:location}
-       ${:location}/bin/jython ${buildout:directory}/tools/xsltest/setup.py develop
-       ${:location}/bin/jython ${buildout:directory}/tools/jxml/setup.py develop
-       ${:location}/bin/jython ${buildout:directory}/tools/jxml/lxml/setup.py develop
-       ${:location}/bin/jython ${buildout:directory}/tools/jxml/jxml.coverage/setup.py develop
-       ${buildout:bin-directory}/pyhwp-download http://mirror.apache-kr.org/xalan/xalan-j/binaries/xalan-j_2_7_1-bin-2jars.tar.gz ${buildout:parts-directory} 3ccda39bcd08b780436dfd2f22fb23d5
-       ${buildout:bin-directory}/pyhwp-unpack ${buildout:parts-directory}/xalan-j_2_7_1-bin-2jars.tar.gz ${buildout:parts-directory}/xalan-j_2_7_1
-uninstall_cmds = rm -rf ${:location}
-on_install = true
-on_update = true
-xalan-j-dir = ${buildout:parts-directory}/xalan-j_2_7_1
-xalan-j-jars = ${:xalan-j-dir}/xalan.jar:${:xalan-j-dir}/xercesImpl.jar:${:xalan-j-dir}/serializer.jar:${:xalan-j-dir}/xml-apis.jar
-
-[virtualenv-unpack]
-recipe = hexagonit.recipe.download
-url = https://pypi.python.org/packages/source/v/virtualenv/virtualenv-1.9.1.tar.gz
-destination = ${buildout:parts-directory}/virtualenv
-strip-top-level-dir = true
 
 [develop-tools]
 recipe = zc.recipe.egg
