buildout: remove develop-tools in developer.cfg

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -6,10 +6,7 @@ develop+= pyhwp-tests
           tools/xsltest
           tools/gpl
           tools/constants
-          tools/download
-          tools/unpack
-parts+= develop-tools
-        test-core
+parts+= test-core
 	test-coverage
 	test-cli
         test-xsl
@@ -89,8 +86,3 @@ extra-paths = ${buildout:directory}/pyhwp
 [pep8]
 recipe = zc.recipe.egg
 eggs = pep8
-
-[develop-tools]
-recipe = zc.recipe.egg
-eggs = pyhwp.develop.download
-       pyhwp.develop.unpack
