buildout: move constants to tester.cfg where it's being used

--- a/buildouts/tester.cfg
+++ b/buildouts/tester.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = developer.cfg
-develop+= 
+develop+= tools/constants
           tools/jingodf
           tools/egg.path
           tools/discover.python
