buildout: add code-analysis to developer.cfg

--- a/buildouts/developer.cfg
+++ b/buildouts/developer.cfg
@@ -14,8 +14,7 @@ parts+= test-core
         test-tools
 	test-for-bisect
         xsltest
-	pylint
-	pep8
+        code-analysis
 
 [pyhwp]
 eggs+= nose
@@ -75,13 +74,11 @@ mode = 755
 recipe = zc.recipe.egg
 eggs = xsltest
 
-[pylint]
-recipe = zc.recipe.egg
-eggs = pylint
-entry-points = pylint=pylint.lint:Run
-arguments = sys.argv[1:]
-extra-paths = ${buildout:directory}/pyhwp
+[code-analysis]
+recipe = plone.recipe.codeanalysis
+directory = ${buildout:directory}/pyhwp
 
-[pep8]
-recipe = zc.recipe.egg
-eggs = pep8
+# Default is 10
+flake8-max-complexity = 30
+
+utf8-header = True
